# redaptcha

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.proxy  README.md  docker-compose.yml  package.json  plan.md  sj.py
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/ja4proxy/: Cargo.toml
crates/ja4proxy/src/: ja4.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: captcha.rs  difficulty.rs  httpfp.rs  instr.rs  main.rs  netintel.rs  pow.rs  setup.rs  sitekeys.rs  store.rs  token.rs
crates/server/src/captchas/: mod.rs
crates/server/src/captchas/four/: mod.rs
crates/server/src/captchas/one/: mod.rs
crates/server/src/captchas/three/: mod.rs
crates/server/src/captchas/two/: mod.rs
crates/vdf/: Cargo.toml
crates/vdf/src/: lib.rs  tests.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: embed.js  main.js  pow-worker.js  style.css  vdf-worker.js  vdf.js
src/: main.rs
