[workspace]
resolver = "2"
members = ["crates/vdf", "crates/core", "crates/server", "crates/ja4proxy"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
crypto-bigint = "0.5"
sha2 = "0.10"
num-bigint = "0.4"
num-integer = "0.1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }