[package]
name = "server"
edition.workspace = true
version.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
num-bigint.workspace = true
vdf = { path = "../vdf" }
core-types = { path = "../core" }