[package]
name = "server"
edition.workspace = true
version.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
num-bigint.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
vdf = { path = "../vdf" }
core-types = { path = "../core" }
subtle = "2"
num-prime = "0.4"
num-integer = "0.1"
time = { version = "0.3", features = ["formatting"] }